src/css/metacatui-common.css
/* ... */
/* Making the publish button consistent size as the downloads all*/
.edit-toolbar >
#owner-controls-container >
.authority-controls >
#publish {
    width: 138px;
}

a.btn.metrics:hover .metric-value.badge {
    float: right;
    color: #1C6E84;
    background-color: #FFFFFF;
}
a.btn.metrics:hover, a.btn.metrics:click {
    color: #888888;
    background-color: #FFFFFF;
    border-color: #C3C3C3;
}

#metric-modal {
    z-index: 1050;
    top: 15%;
    width: 930px;
    height: 500px;
    left: 40%;
}
#metric-modal .modal-content {
    width: auto;

}

#metric-modal .modal-header {
    width: 900px;
    height: 25px;
}

#metric-modal .modal-body {
    width: 930px;
    height: 400px;
    max-height: 400px;
    padding-left: 0px;
    padding-right: 0px;
}

#metric-modal .modal-footer {
    width: 900px;
    height: 25px;
}

#metric-modal .modal-header .left-header-section {
	float: left;
	width: 90%;
}

#metric-modal .modal-header .right-header-section {
	float: right;
	width: 10%;
}

#metric-modal .modal-body .modal-description {
	float: left;
	width: 230px;
	padding: 12px;
	background: #efefef;
	border-radius: 2px;
}

#metric-modal .modal-body .modal-description p {
	margin: 0 0 25px;
}

#metric-modal .modal-body .modal-description p#slider-instructions {
	margin-top: 109px;
	margin-bottom: 0;
}

#metric-modal .modal-body .metric-chart {
	float: right;
	width: 600px;
	padding: 10px 12px 0 10px;
}

/******************************************
* Metric Modal Chart (Views, Downloads, Citations)
********************************************/


#metric-modal .metric-chart text {
	fill: #565656;
	font-size: 9px;
	font-family: Helvetica, Arial, "sans serif";
}

#metric-modal .metric-chart rect.plot-background{
	fill: white;
}

#metric-modal .metric-chart path.line {
	fill: none;
	stroke: black; /* default, changed in each theme */
	stroke-width: 1.5px;
	clip-path: url(#clip);
}

#metric-modal .metric-chart path.area {
	fill: black; /* default, changed in each theme */
	opacity: 0.35;
	clip-path: url(#clip);
}

#metric-modal .metric-chart .axis {
	shape-rendering: crispEdges;
}

#metric-modal .metric-chart .x.axis .domain{
	display:none;
}

#metric-modal .metric-chart .x.axis line {
	stroke: white;
	opacity: 0.8;
}

#metric-modal .metric-chart .context .x.axis line {
	display: none;
}

#metric-modal .metric-chart .y.axis .domain{
	display: none;
	/* fill:none;
	stroke: #565656;
	stroke-width: 1px; */
}

#metric-modal .metric-chart .y.axis.title{
	font-size: 13px;
	font-weight: 100;
}

#metric-modal .metric-chart .y.axis line {
	stroke: #565656;
	stroke-dasharray: 2,2;
	stroke-opacity: 0.3;
}

#metric-modal .metric-chart .brush .extent {
  fill-opacity: .07;
  shape-rendering: crispEdges;
  clip-path: url(#clip);
}

#metric-modal .metric-chart rect.pane {
	cursor: move;
	fill: none;
	pointer-events: all;
}
/* brush handles  */
#metric-modal .metric-chart .resize .handle {
	fill: #555;
}

#metric-modal .metric-chart .resize .handle-mini {
	fill: white;
    stroke-width: 1px;
    stroke: #555;
}

#metric-modal .metric-chart .scale_button {
	cursor: pointer;
}

#metric-modal .metric-chart .scale_button rect {
	fill: #eaeaea;
}
#metric-modal .metric-chart .scale_button:hover text {
	fill: #417DD6;
	transition: all 0.1s cubic-bezier(.25,.8,.25,1);
}

#metric-modal .metric-chart text#displayDates  {
	font-weight: bold;
}

.metric.close {
    margin-top: -18px;
}

.metric-table.table.table-striped.table-condensed {
    width: 930px;
}
.metric-table.table.table-striped.table-condensed td {
    padding: 5px 15px 5px 15px;
}

.metrics-route-to-metadata > span.author {
    color: #888;
    font-weight: normal;
}

.metrics-route-to-metadata > span.pubdate {
    color: #888;
    font-weight: normal;
}

.metrics-route-to-metadata > span.publisher {
    color: #888;
}

/***********
Non-clickable (Disabled) button styling for metrics views
***********/
a.btn.metrics-button-disabled {
    display: inline-block;
    width: auto;
    padding-right: 0px;
    margin-top: -14px;
    margin-left: -5px;
    color: #555;
    background-color: #F3F3F3;
    cursor: default;
    border: none;
    box-shadow: none;

}
.metrics-button-disabled> .metric-value.badge {
    float: right;
    color: #FFF;
    margin-left: 20px;
    background-color: #555;
    margin-top: 2px;
}
.metrics-button-disabled.metric-icon {
    margin-right: 10px;
    float: left;
}
.metrics-button-disabled.metric-name {
    float: left;
    margin-right: 10px;
}
.metrics-button-disabled.metric-value {
    float: right;
}
.metrics-button-disabled:hover, .metrics-button-disabled:click {
    color: #888888;
    background-color: #F5F5F5;
    border-color: #C3C3C3;
}

/******************************************
* The Data Details box in the Metadata View
********************************************/
.entitydetails{
    	border-width: 1px;
    	border-style: solid;
    	border-radius: 4px;
    	-moz-border-radius: 4px;
    	-webkit-border-radius: 4px;
    	margin-bottom: 20px;
    	margin-left: 0px;
    	padding: 20px;
    	width: 85%;
    	width: calc(100% - 180px);
}
.entitydetails tr,
.entitydetails table,
.entitydetails tbody,
.entitydetails td {
    display: block;
    word-wrap: break-word;
    box-sizing: border-box;
}
.entitydetails > h4 > *{
	float: left;
	margin-bottom: 20px;
}
.entitydetails > h4 > i{
	font-size: 1.5em;
}
.entitydetails > h4 > .title{
	width: 80%;
	width: calc(100% - 175px);
	margin-left: 20px;
	word-wrap: break-word;
}
.entitydetails > h4 > .btn{
	float: right;
}
.entitydetails > .control-group{
	clear: both;
}
.entitydetails a.download{
	margin-left: 180px;
	margin-bottom: 20px;
}
.form-horizontal .entitydetails > label{
	text-align: left;
	font-weight: bold;
	width: 98%;
	width: calc(100% - 5px);
	background-color: #CCCCCC;
	padding: 5px;
	color: white;
	margin-bottom: 20px;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	margin-left: -5px;
	margin-top: -5px;
	padding-left: 10px;
}
/* ... */

